--- a/src/client/tool.html
+++ b/src/client/tool.html
@@ -154,6 +154,8 @@
                     </div>
                     <div class="modal-body">
                         <ul class="m-3">
+                            <li class="pb-4">Ensure your neo4j database is running</li>
+                            <li class="pb-4">If you have any issues, refer to the troubleshooting document</li>
                             <li class="pb-4">Input a scopus ID in the search bar and click search to get started</li>
                             <li class="pb-4">Some queries might take some time, so please be patient</li>
                             <li>You can choose to show second degree connections by ticking the check box</li>
