Minor Styling Tweaks

--- a/src/client/tool.html
+++ b/src/client/tool.html
@@ -123,7 +123,7 @@
                     <a id="pub" hidden></a>
                     <a id="pubRes" hidden></a>
                     <input type="checkbox" id="projectExpansion">
-                    <label for="projectExpansion"> Expand </label>
+                    <label for="projectExpansion" class="loadlabels"> Expand </label>
                     <button onclick="draw()" class="loadbutton"> Search </button>
                 </div>
             </div>
